--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/mohamedsamara/mern-ecommerce#readme",
   "dependencies": {
+    "awesome-phonenumber": "^2.29.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
@@ -43,6 +44,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "history": "^4.9.0",
+    "iban": "^0.0.14",
     "jsonwebtoken": "^8.5.1",
     "mailchimp-v3": "^1.0.5",
     "mailgun-js": "^0.22.0",
