--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "history": "^4.9.0",
